--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,12 @@
       <version>1.18.26</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>8.0.0.Final</version>
+    </dependency>
+
   </dependencies>
 
   <build>
